finish index.html

--- a/index.html
+++ b/index.html
@@ -57,21 +57,27 @@
 	<section id="boxes">
 		<div class="container">
 			<div class="box">
+				<img src="img/html5.png" alt="" />
 				<h3>HTML5 markup</h3>	
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 			</div>	
 			<div class="box">
-				<h3>Styling</h3>
+				<img src="img/css3.png" alt="" />
+				<h3>CSS3 Styling</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 			</div>	
 			<div class="box">
+				<img src="img/brush.png" alt="" />
 				<h3>Brand Design</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 			</div>	
 		</div>	
 	</section>
 
-
+	<!-- footer -->
+	<footer>
+		<p>2017 &copy; David Basil</p>	
+	</footer>
 
 </body>
 </html>
