--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width" />
+	 <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>HTML5 playground</title>
 	<link rel="stylesheet" href="css/style.css"/>
 </head>
